[Update]ビュー更新

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,17 +1,37 @@
-<h1>Users</h1>
-<table>
-  <thred>
-    <tr>
-      <th>image</th>
-      <th>name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thred>
-  <tbody>
-    <tr>
-      <td>user_profile</td>
-      <td>user_name</td>
-      <td><%= link_to "Show", book_path(@book.id) %></td>
-    </tr>
-  </tbody>
-</table>
+<div class="row">
+
+  <div class="col-md-3">
+    <%= render 'users/user', user: @user %>
+    <%= render 'books/book' %>
+  </div>
+
+  <div class="col-md-8 offset-md-1">
+
+  <h2>Users</h2>
+
+  <table class="table">
+
+    <thead>
+      <tr>
+        <th>image</th>
+        <th>name</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+
+    <% @users.each do |user| %>
+    <tbody>
+      <tr>
+        <td><%= image_tag user.get_profile_image(80,80) %></td>
+        <td><%= user.name %></td>
+        <td><%= link_to "Show", user_path(user.id) %></td>
+      </tr>
+    </tbody>
+    <% end %>
+
+
+  </table>
+
+  </div>
+
+</div>
