--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -1,9 +1,16 @@
-<h2>Book detail</h2>
-<%= form_with model: Book.new do |f| %>
- <label for="book_title">Title</label>
- <%= f.text_field :title %>
- <label for="book_opinion">Opinion</label>
- <%= f.text_area :body %>
+    <h2 class="mt-3">New book</h2>
 
- <%= f.submit 'Create Book' %>
-<% end %>
+    <%= form_with model: Book.new do |f| %>
+    <div class="form-group">
+      <label for="book_title">Title</label><br />
+      <%= f.text_field :title %>
+    </div>
+    <div class="form-group">
+      <label for="book_opinion">Opinion</label><br />
+      <%= f.text_area :body %>
+    </div>
+    <div class="form-group">
+      <%= f.submit 'Create Book', class: "btn btn-success" %>
+    </div>
+
+    <% end %>
