--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,18 +1,36 @@
-<h2>Books</h2>
-<table>
-  <thred>
+<div class="row">
+
+  <div class="col-md-3">
+    <%= render 'users/user', user: @user %>
+    <%= render 'books/book' %>
+  </div>
+
+  <div class="col-md-8 offset-md-1">
+
+  <h2>Books</h2>
+  <table class="table table-hover table-inverse">
+  <thead>
     <tr>
-      <th colspan"3"></th>
       <th>Title</th>
       <th>Opinion</th>
+      <th colspan"3"></th>
     </tr>
-  </thred>
+  </thead>
+
   <tbody>
-  <%= @books.each do |book| %>
+  <% @books.each do |book| %>
     <tr>
-      <td>user.profile_image</td>
-      <td><%= book.title %></td>
+      <td>
+        <%= image_tag @user.get_profile_image(80,80) %>
+      </td>
+      <td><%= link_to book.title, book_path(book.id) %></td>
       <td><%= book.body %></td>
     </tr>
+  <% end %>
   </tbody>
-</table>
+
+  </table>
+
+  </div>
+
+</div>
