--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,24 +1,28 @@
-<h2>User info</h2>
-profile_image
-<table>
-  <tr>
-    <th>name</th>
-    <th>user.name</th>
-  </tr>
-  <tr>
-    <th>introduction</th>
-    <th>user.introduction</th>
-  </tr>
-</table>
+<div class="row">
 
-<h2>Book detail</h2>
-<table>
-  <tr>
-    <td>profile_image</td>
-    <p>user name</p>
-    <td><%= book.title %></td>
-    <td><%= book.body %></td>
-    <td><%= link_to "Edit", edit_book_path(book.id) %></td>
-    <td><%= link_to "Destroy", @book.id, method: :delete, "data-confirm" => "本当に削除しますか？" %></td>
-  </tr>
-</table>
+  <div class="col-md-3">
+    <%= render 'users/user', user: @user %>
+    <%= render 'books/book' %>
+  </div>
+
+  <div class="col-md-8 offset-md-1">
+
+  <h2>Book detail</h2>
+  <table class="table">
+    <tbody>
+      <tr>
+        <td>
+        <%= image_tag user.get_profile_image(80,80) %><br />
+        <%= user name %>
+        </td>
+        <td><%= link_to book.title, book_path(book.id) %></td>
+        <td><%= book.body %></td>
+        <td><%= link_to "Edit", edit_book_path(book.id) %></td>
+        <td><%= link_to "Destroy", @book.id, method: :delete, "data-confirm" => "本当に削除しますか？" %></td>
+      </tr>
+    </tbody>
+  </table>
+
+  </div>
+
+</div>
