--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,12 +1,20 @@
-<h2>User info</h2>
-profile_image
-<table>
-  <tr>
-    <th>name</th>
-    <th>current_user.name</th>
-  </tr>
-  <tr>
-    <th>introduction</th>
-    <th>current_user.introduction</th>
-  </tr>
-</table>
+      <h2>User info</h2>
+      <%= image_tag user.get_profile_image(100,100) %>
+      <table class="table">
+        <tbody>
+          <tr></tr>
+          <tr>
+            <th>name</th>
+            <th><%= user.name %></th>
+          </tr>
+          <tr>
+            <th>introduction</th>
+            <th><%= user.introduction %></th>
+          </tr>
+        </tbody>
+      </table>
+      <div class="row">
+        <%= link_to edit_user_path(user), class: "btn btn-outline-secondary block" do %>
+        <i class="fa-solid fa-user-gear"></i>
+      <% end %>
+      </div>
