--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -1,16 +1,16 @@
-    <h2 class="mt-3">New book</h2>
+  <h2 class="mt-3">New book</h2>
 
-    <%= form_with model: Book.new do |f| %>
+  <%= form_with model: Book.new do |f| %>
     <div class="form-group">
       <label for="book_title">Title</label><br />
-      <%= f.text_field :title %>
+      <%= f.text_field :title, class: "form-control book_title" %>
     </div>
     <div class="form-group">
       <label for="book_opinion">Opinion</label><br />
-      <%= f.text_area :body %>
+      <%= f.text_area :body, class: "form-control book_body" %>
     </div>
     <div class="form-group">
       <%= f.submit 'Create Book', class: "btn btn-success" %>
     </div>
 
-    <% end %>
+  <% end %>
