--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -3,22 +3,31 @@
 
     <h1>Editing Book</h1>
 
-    <div class="form-group">
-      <label for="book_title">Title</label><br />
-      <%= f.text_field :title %>
-    </div>
-    <div class="form-group">
-      <label for="book_opinion">Opinion</label><br />
-      <%= f.text_area :body %>
+    <div id="error_explanation">
+      <%= render 'layouts/error_messages' %>
     </div>
 
-    <div class="form-group">
-      <%= f.submit "Update Book", class: "btn btn-success" %>
-    </div>
+    <%= form_with model: @book do |f| %>
+
+      <div class="form-group">
+        <label for="book_title">Title</label>
+        <%= f.text_field :title, class: "form-control book_title" %>
+      </div>
+      <div class="form-group">
+        <label for="book_opinion">Opinion</label>
+        <%= f.text_area :body, class: "form-control book_body" %>
+      </div>
+
+      <div class="form-group">
+        <%= f.submit "Update Book", class: "btn btn-success" %>
+      </div>
+
+    <% end %>
 
     <%= link_to "Show", book_path(@book.id) %>
     |
     <%= link_to "Back", books_path %>
+
 
   </div>
 </div>
