--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,7 @@
+<div id="error_explanation">
+  <%= render 'layouts/error_messages' %>
+</div>
+
 <div class="row">
 
   <div class="col-md-3">
@@ -11,6 +15,7 @@
   <table class="table table-hover table-inverse">
   <thead>
     <tr>
+      <th></th>
       <th>Title</th>
       <th>Opinion</th>
       <th colspan"3"></th>
@@ -21,7 +26,9 @@
   <% @books.each do |book| %>
     <tr>
       <td>
-        <%= image_tag @user.get_profile_image(80,80) %>
+      <%= link_to user_path(book.user.id) do %>
+        <%= image_tag book.user.get_profile_image(80,80) %><br>
+      <% end %>
       </td>
       <td><%= link_to book.title, book_path(book.id) %></td>
       <td><%= book.body %></td>
