--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
 
   <div class="col-md-3">
-    <%= render 'users/user', user: @user %>
+    <%= render 'users/user', user: @book.user %>
     <%= render 'books/book' %>
   </div>
 
@@ -12,13 +12,22 @@
     <tbody>
       <tr>
         <td>
-        <%= image_tag user.get_profile_image(80,80) %><br />
-        <%= user name %>
+          <%= link_to user_path(@book.user.id) do %>
+            <%= image_tag @book.user.get_profile_image(100,100) %><br>
+            <%= @book.user.name %>
+          <% end %>
         </td>
-        <td><%= link_to book.title, book_path(book.id) %></td>
-        <td><%= book.body %></td>
-        <td><%= link_to "Edit", edit_book_path(book.id) %></td>
-        <td><%= link_to "Destroy", @book.id, method: :delete, "data-confirm" => "本当に削除しますか？" %></td>
+        <td><%= link_to @book.title, book_path(@book.id) %></td>
+        <td><%= @book.body %></td>
+
+      <% if @book.user.id == current_user.id %>
+        <td>
+          <%= link_to "Edit", edit_book_path(@book.id), class: "btn btn-sm btn-success" %>
+        </td>
+        <td>
+          <%= link_to "Destroy", book_path(@book.id), method: :delete, class: "btn btn-sm btn-danger", "data-confirm" => "本当に削除しますか？" %>
+        </td>
+      <% end %>
       </tr>
     </tbody>
   </table>
