--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,11 +1,17 @@
-<p id="notice"></p>
+<% if @user.errors.any? %>
+  <%= @user.errors.count %>errors prohibited this obj from being saved:
+  <ul>
+    <% @user.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
 
-<div class="container">
-  <div class="row">
-    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+<div class="row">
+  <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
 
     <h2>User info</h2>
-    <%= form_with model: @user do |f| %>
+    <%= form_with model: @user, url: user_path, method: :patch do |f| %>
     <div class="form-group">
       <label for="user_name">Name</label><br />
       <%= f.text_field :name, id:"user_name" %>
@@ -23,6 +29,6 @@
     </div>
     <% end %>
 
-    </div>
   </div>
 </div>
+
