--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,22 +11,29 @@
 
   <table class="table table-hover table-inverse">
 
-    <thred>
+    <thead>
       <tr>
         <th></th>
         <th>Title</th>
         <th>Opinion</th>
         <th colspan="3"></th>
       </tr>
-    </thred>
+    </thead>
 
+    <% @books.each do |book| %>
     <tbody>
       <tr>
-        <td></td>
+        <td>
+        <%= link_to user_path(book.user.id) do %>
+          <%= image_tag book.user.get_profile_image(80,80) %><br>
+        <% end %>
+        </td>
         <td><%= link_to book.title, book_path(book.id) %></td>
         <td><%= book.body %></td>
       </tr>
     </tbody>
+    <% end %>
+
   </table>
 
   </div>
